wip: sprite changes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
 				opacity: 0.8;
 				user-select: none;
 			}
+			.container {
+				display: flex;
+				width: 100px;
+			}
 		</style>
 	</head>
 	<body>
+		<ul>
+			<li class="unique-image-count"></li>
+			<li class="total-image-count"></li>
+		</ul>
+		<div class="container">
+			<button class="increase-unique-image-count">+10</button>
+			<button class="decrease-unique-image-count">+10</button>
+		</div>
 		<script type="text/javascript" src="bundle.js"></script>
 	</body>
 </html>
