feat: update image counts from url

--- a/index.html
+++ b/index.html
@@ -16,19 +16,15 @@
 			}
 			.container {
 				display: flex;
-				width: 100px;
+				width: 500px;
+				margin: 7px;
+			}
+			.refresh {
+				margin-left: 10px;
 			}
 		</style>
 	</head>
 	<body>
-		<ul>
-			<li class="unique-image-count"></li>
-			<li class="total-image-count"></li>
-		</ul>
-		<div class="container">
-			<button class="increase-unique-image-count">+10</button>
-			<button class="decrease-unique-image-count">+10</button>
-		</div>
 		<script type="text/javascript" src="bundle.js"></script>
 	</body>
 </html>
